[gd_scene load_steps=5 format=3 uid="uid://battle001"]

[ext_resource type="Script" path="res://scripts/battle_ui.gd" id="1_ui"]
[ext_resource type="Script" path="res://scripts/battle_manager.gd" id="2_mgr"]
[ext_resource type="Theme" path="res://theme.tres" id="3_theme"]
[ext_resource type="Texture2D" path="res://assets/sprites/battle_bg.png" id="4_bg_tex"]

[node name="BattleScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_theme")
script = ExtResource("1_ui")

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("2_mgr")

[node name="BattleField" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="BattleField"]
texture = ExtResource("4_bg_tex")
centered = false
scale = Vector2(0.91, 0.94)

[node name="CharacterLayer" type="Node2D" parent="BattleField"]

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopBar" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 140.0
theme_override_constants/separation = 40

[node name="PlayerSide" type="VBoxContainer" parent="UI/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="PlayerLabel" type="Label" parent="UI/TopBar/PlayerSide"]
layout_mode = 2
text = "— 我方 —"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 14
modulate = Color(0.4, 0.9, 0.4, 1)

[node name="Player1" type="PanelContainer" parent="UI/TopBar/PlayerSide"]
layout_mode = 2
self_modulate = Color(0.1, 0.15, 0.25, 0.8)

[node name="V" type="VBoxContainer" parent="UI/TopBar/PlayerSide/Player1"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Name" type="Label" parent="UI/TopBar/PlayerSide/Player1"]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
text = "剑修·云逸"
theme_override_font_sizes/font_size = 14

[node name="Realm" type="Label" parent="UI/TopBar/PlayerSide/Player1"]
layout_mode = 2
text = "炼气期"
theme_override_font_sizes/font_size = 11
modulate = Color(0.7, 0.7, 1.0, 0.8)

[node name="HP" type="Label" parent="UI/TopBar/PlayerSide/Player1"]
layout_mode = 2
text = "HP: 120/120"
theme_override_font_sizes/font_size = 12

[node name="HPBar" type="ProgressBar" parent="UI/TopBar/PlayerSide/Player1"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)
max_value = 100.0
value = 100.0
show_percentage = false
modulate = Color(0.2, 0.8, 0.2, 1)

[node name="MP" type="Label" parent="UI/TopBar/PlayerSide/Player1"]
layout_mode = 2
text = "MP: 60/60"
theme_override_font_sizes/font_size = 12

[node name="MPBar" type="ProgressBar" parent="UI/TopBar/PlayerSide/Player1"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)
max_value = 100.0
value = 100.0
show_percentage = false
modulate = Color(0.2, 0.4, 0.9, 1)

[node name="Player2" type="PanelContainer" parent="UI/TopBar/PlayerSide"]
layout_mode = 2
self_modulate = Color(0.1, 0.15, 0.25, 0.8)

[node name="Name" type="Label" parent="UI/TopBar/PlayerSide/Player2"]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
text = "丹修·灵溪"
theme_override_font_sizes/font_size = 14

[node name="Realm" type="Label" parent="UI/TopBar/PlayerSide/Player2"]
layout_mode = 2
text = "炼气期"
theme_override_font_sizes/font_size = 11
modulate = Color(0.7, 0.7, 1.0, 0.8)

[node name="HP" type="Label" parent="UI/TopBar/PlayerSide/Player2"]
layout_mode = 2
text = "HP: 90/90"
theme_override_font_sizes/font_size = 12

[node name="HPBar" type="ProgressBar" parent="UI/TopBar/PlayerSide/Player2"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)
max_value = 100.0
value = 100.0
show_percentage = false
modulate = Color(0.2, 0.8, 0.2, 1)

[node name="MP" type="Label" parent="UI/TopBar/PlayerSide/Player2"]
layout_mode = 2
text = "MP: 100/100"
theme_override_font_sizes/font_size = 12

[node name="MPBar" type="ProgressBar" parent="UI/TopBar/PlayerSide/Player2"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)
max_value = 100.0
value = 100.0
show_percentage = false
modulate = Color(0.2, 0.4, 0.9, 1)

[node name="Spacer" type="Control" parent="UI/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemySide" type="VBoxContainer" parent="UI/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="EnemyLabel" type="Label" parent="UI/TopBar/EnemySide"]
layout_mode = 2
text = "— 敌方 —"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 14
modulate = Color(0.9, 0.3, 0.3, 1)

[node name="Enemy1" type="PanelContainer" parent="UI/TopBar/EnemySide"]
layout_mode = 2
self_modulate = Color(0.2, 0.1, 0.1, 0.8)

[node name="Name" type="Label" parent="UI/TopBar/EnemySide/Enemy1"]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
text = "妖狼"
theme_override_font_sizes/font_size = 14

[node name="HP" type="Label" parent="UI/TopBar/EnemySide/Enemy1"]
layout_mode = 2
text = "HP: 80/80"
theme_override_font_sizes/font_size = 12

[node name="HPBar" type="ProgressBar" parent="UI/TopBar/EnemySide/Enemy1"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)
max_value = 100.0
value = 100.0
show_percentage = false
modulate = Color(0.8, 0.2, 0.2, 1)

[node name="Enemy2" type="PanelContainer" parent="UI/TopBar/EnemySide"]
layout_mode = 2
self_modulate = Color(0.2, 0.1, 0.1, 0.8)

[node name="Name" type="Label" parent="UI/TopBar/EnemySide/Enemy2"]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
text = "毒蛇精"
theme_override_font_sizes/font_size = 14

[node name="HP" type="Label" parent="UI/TopBar/EnemySide/Enemy2"]
layout_mode = 2
text = "HP: 60/60"
theme_override_font_sizes/font_size = 12

[node name="HPBar" type="ProgressBar" parent="UI/TopBar/EnemySide/Enemy2"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)
max_value = 100.0
value = 100.0
show_percentage = false
modulate = Color(0.8, 0.2, 0.2, 1)

[node name="Enemy3" type="PanelContainer" parent="UI/TopBar/EnemySide"]
layout_mode = 2
self_modulate = Color(0.2, 0.1, 0.1, 0.8)

[node name="Name" type="Label" parent="UI/TopBar/EnemySide/Enemy3"]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
text = "石魔"
theme_override_font_sizes/font_size = 14

[node name="HP" type="Label" parent="UI/TopBar/EnemySide/Enemy3"]
layout_mode = 2
text = "HP: 150/150"
theme_override_font_sizes/font_size = 12

[node name="HPBar" type="ProgressBar" parent="UI/TopBar/EnemySide/Enemy3"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)
max_value = 100.0
value = 100.0
show_percentage = false
modulate = Color(0.8, 0.2, 0.2, 1)

[node name="ATBPanel" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -260.0
offset_top = 150.0
offset_right = -10.0
offset_bottom = 360.0
theme_override_constants/separation = 4

[node name="ATBTitle" type="Label" parent="UI/ATBPanel"]
layout_mode = 2
text = "⏱ 速度条"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 13

[node name="ATB_P1" type="HBoxContainer" parent="UI/ATBPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/ATBPanel/ATB_P1"]
layout_mode = 2
custom_minimum_size = Vector2(70, 0)
text = "云逸"
theme_override_font_sizes/font_size = 11

[node name="Bar" type="ProgressBar" parent="UI/ATBPanel/ATB_P1"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 10)
max_value = 100.0
value = 0.0
show_percentage = false
modulate = Color(0.3, 0.8, 0.3, 1)

[node name="ATB_P2" type="HBoxContainer" parent="UI/ATBPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/ATBPanel/ATB_P2"]
layout_mode = 2
custom_minimum_size = Vector2(70, 0)
text = "灵溪"
theme_override_font_sizes/font_size = 11

[node name="Bar" type="ProgressBar" parent="UI/ATBPanel/ATB_P2"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 10)
max_value = 100.0
value = 0.0
show_percentage = false
modulate = Color(0.3, 0.8, 0.3, 1)

[node name="ATB_E1" type="HBoxContainer" parent="UI/ATBPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/ATBPanel/ATB_E1"]
layout_mode = 2
custom_minimum_size = Vector2(70, 0)
text = "妖狼"
theme_override_font_sizes/font_size = 11

[node name="Bar" type="ProgressBar" parent="UI/ATBPanel/ATB_E1"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 10)
max_value = 100.0
value = 0.0
show_percentage = false
modulate = Color(0.8, 0.3, 0.3, 1)

[node name="ATB_E2" type="HBoxContainer" parent="UI/ATBPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/ATBPanel/ATB_E2"]
layout_mode = 2
custom_minimum_size = Vector2(70, 0)
text = "蛇精"
theme_override_font_sizes/font_size = 11

[node name="Bar" type="ProgressBar" parent="UI/ATBPanel/ATB_E2"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 10)
max_value = 100.0
value = 0.0
show_percentage = false
modulate = Color(0.8, 0.3, 0.3, 1)

[node name="ATB_E3" type="HBoxContainer" parent="UI/ATBPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/ATBPanel/ATB_E3"]
layout_mode = 2
custom_minimum_size = Vector2(70, 0)
text = "石魔"
theme_override_font_sizes/font_size = 11

[node name="Bar" type="ProgressBar" parent="UI/ATBPanel/ATB_E3"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 10)
max_value = 100.0
value = 0.0
show_percentage = false
modulate = Color(0.8, 0.3, 0.3, 1)

[node name="ActionPanel" type="PanelContainer" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -160.0
offset_right = 300.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
self_modulate = Color(0.08, 0.1, 0.18, 0.9)

[node name="UnitLabel" type="Label" parent="UI/ActionPanel"]
layout_mode = 2
offset_left = 10.0
offset_top = 8.0
text = "【回合】"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="AttackBtn" type="Button" parent="UI/ActionPanel"]
layout_mode = 2
offset_top = 38.0
offset_right = 600.0
offset_bottom = 73.0
text = "⚔️ 普通攻击"

[node name="Skills" type="HBoxContainer" parent="UI/ActionPanel"]
layout_mode = 2
offset_top = 80.0
offset_right = 600.0
offset_bottom = 125.0
theme_override_constants/separation = 10

[node name="Skill1" type="Button" parent="UI/ActionPanel/Skills"]
layout_mode = 2
size_flags_horizontal = 3
text = "技能1"

[node name="Skill2" type="Button" parent="UI/ActionPanel/Skills"]
layout_mode = 2
size_flags_horizontal = 3
text = "技能2"

[node name="Skill3" type="Button" parent="UI/ActionPanel/Skills"]
layout_mode = 2
size_flags_horizontal = 3
text = "技能3"

[node name="TargetPanel" type="PanelContainer" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
self_modulate = Color(0.1, 0.08, 0.15, 0.9)

[node name="VBox" type="VBoxContainer" parent="UI/TargetPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="UI/TargetPanel/VBox"]
layout_mode = 2
text = "选择目标"
horizontal_alignment = 1

[node name="Targets" type="VBoxContainer" parent="UI/TargetPanel"]
layout_mode = 2
offset_top = 30.0
offset_right = 300.0
offset_bottom = 200.0
theme_override_constants/separation = 5

[node name="LogPanel" type="PanelContainer" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -160.0
offset_right = 380.0
offset_bottom = -10.0
self_modulate = Color(0.05, 0.05, 0.1, 0.85)

[node name="Log" type="RichTextLabel" parent="UI/LogPanel"]
layout_mode = 2
text = ""
scroll_following = true
theme_override_font_sizes/normal_font_size = 12

[node name="ResultPanel" type="PanelContainer" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = 80.0
self_modulate = Color(0.05, 0.08, 0.15, 0.95)

[node name="ResultLabel" type="Label" parent="UI/ResultPanel"]
layout_mode = 2
offset_top = 20.0
text = "战斗结果"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="ReturnBtn" type="Button" parent="UI/ResultPanel"]
layout_mode = 2
offset_top = 80.0
offset_right = 400.0
offset_bottom = 120.0
text = "返回主界面"
